--- a/notebooks/chord_progressions.ipynb
+++ b/notebooks/chord_progressions.ipynb
@@ -81,7 +81,7 @@
     "name_all_1 = \"i,min-ii,maj-iii,dim-IV,aug\"\n",
     "name_all_2 = \"V,min6-vi,maj6-vii,min7-I,minmaj7\"\n",
     "name_all_3 = \"ii,maj7-iii,7-IV,dim7-V,hdim7\"\n",
-    "name_all_4 = \"vi,sus2-vii,sus4-I\"\n",
+    "name_all_4 = \"vi,sus2-vii,sus4-I,maj-vi,min\"\n",
     "\n",
     "generate_progression(prog_all_1, name_all_1, MIDI_DIR, DEFAULT_TEMPO)\n",
     "generate_progression(prog_all_2, name_all_2, MIDI_DIR, DEFAULT_TEMPO)\n",
